--- a/ProjektZTP/ProjektZTP.csproj
+++ b/ProjektZTP/ProjektZTP.csproj
@@ -403,6 +403,10 @@
     <Compile Include="Migrations\202301151954116_FieldsInWordRequired.designer.cs">
       <DependentUpon>202301151954116_FieldsInWordRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301161426136_AddedScoreToUser.cs" />
+    <Compile Include="Migrations\202301161426136_AddedScoreToUser.designer.cs">
+      <DependentUpon>202301161426136_AddedScoreToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -503,6 +507,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202301151954116_FieldsInWordRequired.resx">
       <DependentUpon>202301151954116_FieldsInWordRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301161426136_AddedScoreToUser.resx">
+      <DependentUpon>202301161426136_AddedScoreToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
