--- a/ProjektZTP/ProjektZTP.csproj
+++ b/ProjektZTP/ProjektZTP.csproj
@@ -200,6 +200,13 @@
     <Reference Include="Microsoft.Win32.Registry, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Registry.4.5.0\lib\net461\Microsoft.Win32.Registry.dll</HintPath>
     </Reference>
+    <Reference Include="NDice, Version=0.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NDice.0.9.1\lib\netstandard2.0\NDice.dll</HintPath>
+    </Reference>
+    <Reference Include="NDice.Randomizers.Troschuetz, Version=0.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NDice.Randomizers.Troschuetz.0.9.1\lib\netstandard2.0\NDice.Randomizers.Troschuetz.dll</HintPath>
+    </Reference>
+    <Reference Include="netstandard" />
     <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.1\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
     </Reference>
@@ -315,6 +322,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Troschuetz.Random, Version=0.0.0.0, Culture=neutral, PublicKeyToken=2f204b7110a52060, processorArchitecture=MSIL">
+      <HintPath>..\packages\Troschuetz.Random.4.3.1\lib\net472\Troschuetz.Random.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -411,12 +421,15 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\QuestionViewModels.cs" />
     <Compile Include="Models\ReadWordsDTO.cs" />
     <Compile Include="Models\Word.cs" />
     <Compile Include="Patterns\Builder\AnswerBuilder.cs" />
     <Compile Include="Patterns\Builder\AnswerDirector.cs" />
     <Compile Include="Patterns\Builder\SameLengthBuilder.cs" />
     <Compile Include="Patterns\Builder\SameLetterBuilder.cs" />
+    <Compile Include="Patterns\Iterator\InterfaceIterator.cs" />
+    <Compile Include="Patterns\Iterator\Iterator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WordsService.cs" />
     <Compile Include="Startup.cs" />
