--- a/ProjektZTP/packages.config
+++ b/ProjektZTP/packages.config
@@ -91,6 +91,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="NDice" version="0.9.1" targetFramework="net48" />
+  <package id="NDice.Randomizers.Troschuetz" version="0.9.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
@@ -110,6 +112,7 @@
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net48" />
+  <package id="Troschuetz.Random" version="4.3.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
   <package id="X.PagedList" version="8.0.5" targetFramework="net48" />
   <package id="X.PagedList.Mvc.Core" version="8.0.5" targetFramework="net48" />
