--- a/ProjektZTP/ProjektZTP.csproj
+++ b/ProjektZTP/ProjektZTP.csproj
@@ -398,6 +398,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LangController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\QuizController.cs" />
     <Compile Include="Controllers\WordsController.cs" />
@@ -417,6 +418,10 @@
     <Compile Include="Migrations\202301161426136_AddedScoreToUser.designer.cs">
       <DependentUpon>202301161426136_AddedScoreToUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301181333097_AddLangToUser.cs" />
+    <Compile Include="Migrations\202301181333097_AddLangToUser.designer.cs">
+      <DependentUpon>202301181333097_AddLangToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -431,6 +436,7 @@
     <Compile Include="Patterns\Iterator\InterfaceIterator.cs" />
     <Compile Include="Patterns\Iterator\Iterator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LangService.cs" />
     <Compile Include="Services\WordsService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -497,6 +503,7 @@
     <Content Include="Views\Words\Delete.cshtml" />
     <Content Include="Views\Words\Edit.cshtml" />
     <Content Include="Views\Words\Create.cshtml" />
+    <Content Include="Views\Lang\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -523,6 +530,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202301161426136_AddedScoreToUser.resx">
       <DependentUpon>202301161426136_AddedScoreToUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301181333097_AddLangToUser.resx">
+      <DependentUpon>202301181333097_AddLangToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
