--- a/ProjektZTP/ProjektZTP.csproj
+++ b/ProjektZTP/ProjektZTP.csproj
@@ -446,6 +446,7 @@
     <Compile Include="Patterns\State\TestState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LangService.cs" />
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\WordsService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
